# Proyectol_Programacionll

./: .gitignore  ArchivoInvalidoException.cpp  ArchivoInvalidoException.h  BusquedaBinaria.cpp  BusquedaBinaria.h  CMakeLists.txt  CalcularRiesgo.cpp  CalcularRiesgo.h  DecoradorIncidencia.cpp  DecoradorIncidencia.h  DefinirEquipo.cpp  DefinirEquipo.h  Documento_Tecnico.md  EleccionPrioridad.cpp  EleccionPrioridad.h  Equipo.cpp  Equipo.h  EquipoCritico.cpp  EquipoCritico.h  EquipoEstandar.cpp  EquipoEstandar.h  FormatoInvalidoException.cpp  FormatoInvalidoException.h  GeneradorIncidencias.cpp  GeneradorIncidencias.h  GeneradorReportes.cpp  GeneradorReportes.h  Incidencia.cpp  Incidencia.h  IncidenciaBase.cpp  IncidenciaBase.h  IncidenciaSeveridadAlta.cpp  IncidenciaSeveridadAlta.h  IncidenciaSeveridadBaja.cpp  IncidenciaSeveridadBaja.h  IncidenciaSeveridadMedia.cpp  IncidenciaSeveridadMedia.h  InvalidoException.cpp  InvalidoException.h  LectorArchivos.cpp  (+16 more)
